--- a/index.html
+++ b/index.html
@@ -11,13 +11,20 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./style.css" />
+    <!-- <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+      defer
+    ></script>
+    <script src="./index.js" type="module"></script> -->
   </head>
   <body>
     <nav class="navbar bg-body-tertiary">
       <div class="container-fluid">
         <form class="d-flex" role="search">
           <input
-            onkeyup="cercaLibro()"
+            onkeyup="searchBook()"
             id="cercaLibro2"
             class="form-control me-2"
             type="search"
@@ -32,7 +39,7 @@
       <div id="scatola1">
         <div class="d-flex justify-content-around">
           <h2>Carrello</h2>
-          <button onclick="svuota()" class="btn btn-outline-success">
+          <button onclick="empty()" class="btn btn-outline-success">
             svuota
           </button>
         </div>
@@ -47,11 +54,11 @@
         class="container d-flex justify-content-center flex-wrap"
       ></div>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-    <script src="./index.js"></script>
   </body>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"
+  ></script>
+  <script src="./index.js"></script>
 </html>
